...
        for day in days {
            let title = (self.viewModel.days.value == day ? "✓ " : "") + String(day) + " " + (day == 1 ? "day" : "days")
            actionSheet.addAction(UIAlertAction(title: title, style: .default, handler: { [weak self] (_) in
                self?.viewModel.daySelected(days: day)
            }))
        }
        actionSheet.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        self.present(actionSheet, animated: true, completion: nil)
    }

    // MARK: - Setup

    private func setupBindings() {
...
